--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vanilka",
   "version": "1.0.0",
-  "description": "Vanilka is an starter wordpress theme.",
+  "description": "Vanilka is an wordpress starter theme",
   "main": "",
   "scripts": {
     "build:js": "browserify -d src/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
@@ -17,7 +17,7 @@
     "port": "3000"
   },
   "keywords": [],
-  "author": "Nafta",
+  "author": "Nafta <naftasan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.1",
