--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "Vanilka is an wordpress starter theme",
   "main": "",
   "scripts": {
+    "minify:css": "cleancss style.css -o style.min.css",
+    "minify:js": "uglifyjs ./app.js -o app.min.js",
+    "minify": "npm run minify:css | npm run minify:js",
+    "prebuild:production": "npm run build",
+    "build:production": "npm run minify",
+    "build:development": "npm run build",
+    "build": "npm run build:css & npm run build:js",
     "build:js": "browserify -d src/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
     "watch:js": "watchify -d src/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
     "build:css": "node-sass src/styles/main.scss style.css --source-map-embed",
@@ -25,7 +32,9 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.4.0",
+    "clean-css-cli": "^4.1.3",
     "node-sass": "^4.5.3",
+    "uglify-js": "^3.0.15",
     "watchify": "^3.9.0"
   }
 }
