--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start": "npm run serve"
   },
   "config": {
-    "proxy": "vanilla.dev",
-    "port": "3000"
+    "proxy": "vanilla.dev"
   },
   "keywords": [],
   "author": "Nafta <naftasan@gmail.com>",
