--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,9 @@
     "watch:css": "node-sass styles/*.sass -w -o dist/ --souce-map-embed",
     "build:html": "pug views/*.pug -P -o dist/",
     "watch:html": "pug views/*.pug -P -w -o dist/",
-    "minify:assets": "usemin dist/index.html -d dist -o dist/index.html --rmlr true",
+    "minify:assets": "npm run minify:index | npm run minify:docs",
+    "minify:index": "usemin dist/index.html -d dist -o dist/index.html --rmlr true",
+    "minify:docs": "usemin dist/docs.html -d dist -o dist/docs.html --rmlr true",
     "server": "browser-sync start --server 'dist' --files 'dist/*.css, dist/*.js, dist/*.html'",
     "watch": "npm run watch:html | npm run watch:css",
     "serve": "npm run watch | npm run server",
