handle username change

--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "build:production": "npm run minify",
     "build:development": "npm run build",
     "build": "npm run build:css & npm run build:js",
-    "build:js": "browserify -d assets/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
-    "watch:js": "watchify -d assets/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
-    "build:css": "node-sass assets/styles/main.scss style.css --source-map-embed",
-    "watch:css": "node-sass assets/styles/main.scss style.css --source-map-embed --w",
-    "server": "browser-sync start --proxy $npm_package_config_proxy --files '*.css, **/*.php, *.js'",
+    "build:js":
+      "browserify -d assets/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
+    "watch:js":
+      "watchify -d assets/scripts/app.js -o app.js -t [ babelify --presets [es2015] ]",
+    "build:css":
+      "node-sass assets/styles/main.scss style.css --source-map-embed",
+    "watch:css":
+      "node-sass assets/styles/main.scss style.css --source-map-embed --w",
+    "server":
+      "browser-sync start --proxy $npm_package_config_proxy --files '*.css, **/*.php, *.js'",
     "serve": "npm run watch:css | npm run watch:js |  npm run server",
     "start": "npm run serve",
     "watch": "npm run watch:css | npm run watch:js"
@@ -24,7 +29,7 @@
     "proxy": "vanilla.dev"
   },
   "keywords": [],
-  "author": "Nafta <naftasan@gmail.com>",
+  "author": "Nefla <neflasan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.1",
